name:                HelloBot
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable HelloBot
  main-is:             Main.hs
  other-modules:       IrcClient, Parsers, Types
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10,
                       attoparsec >= 0.13.0.2,
                       bytestring >= 0.10.6,
                       containers >= 0.5.6.2,
                       network >= 2.6.3.1,
                       optparse-applicative >= 0.12.1.0,
                       random >= 1.1,
                       text >= 1.2.2,
                       text-icu >= 0.7.0.1,
                       transformers >= 0.5.2.0,
                       vector >= 0.11.0.0

  hs-source-dirs:      src
  default-language:    Haskell2010
